Connect device to user profile backend + reformat of frontend
+ preparing for buttonpress events, when we need that
