# server/api/Controllers/MQTT/DeviceListener.cs
@@ -9,7 +9,10 @@ namespace api.Controllers.MQTT;
 public class DeviceListener(ISseBackplane backplane) : MqttController, IPublisher<PairingRequest>
 {
     private const string GroupId = "deviceJoin"; // ved ikke om denne er nødvendig siden vi bare bruger lobbykoden til at adskille grupperne
+    //[Deprecated]
     private const string MqttRoute = "my/topic";
+
+    private const string ConnectTopic = "controller/{deviceId}/connectcode";
 
     [MqttRoute(MqttRoute)]
     public async Task CollectDeviceConnection(PairingRequest pairing)
