# server/dataaccess/Entities/UserDeviceLink.cs
@@ -1,17 +1,14 @@
-﻿using System;
-using System.Collections.Generic;
-
-namespace dataaccess;
+﻿namespace DataAccess.Entities;
 
 public partial class UserDeviceLink
 {
     public int Id { get; set; }
 
-    public string? UserId { get; set; }
+    public string UserId { get; set; } = null!;
 
-    public string? DeviceId { get; set; }
+    public string DeviceId { get; set; } = null!;
 
-    public string? DisplayName { get; set; }
+    public string DisplayName { get; set; } = null!;
 
-    public virtual User? User { get; set; }
+    public virtual User User { get; set; } = null!;
 }
