# server/service/Models/Device/Inbound/ButtonPressRequest.cs
@@ -1,0 +1,25 @@
+﻿namespace api.Controllers.MQTT;
+
+public record ButtonPressRequest(string deviceId, ButtonPressRequest.Button button)
+{
+
+    public enum Button
+    {
+        Red,
+        Green,
+        Blue,
+        Yellow,
+    }
+
+    public static Button GetButtonFromString(string button)
+    {
+        return button.ToLower() switch
+        {
+            "red" => Button.Red,
+            "blue" => Button.Blue,
+            "green" => Button.Green,
+            "yellow" => Button.Yellow,
+            _ => Button.Red
+        };
+    }
+}
